--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 		<script src="js/items/ScanLines.js"></script>
 		
 		<script src="js/groups/Groups.js"></script>
+		<script src="js/Palettes.js"></script>
 
 		<script src="js/shaders/BokehShader2.js"></script>
 <!--
