Adding leapmotion shades mover

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 		<script src="libs/tween/Tween.js"></script>
 		<script src="libs/keypress/keypress.js"></script>
 		<script src="libs/leapmotion/leap.min.js"></script>
+		<script src="libs/colors.min.js"></script>
 
 		<script src="js/base/Mover.js"></script>
 		<script src="js/base/Thing.js"></script>
